# scheme-lsp-server

./: .gitignore  .gitmodules  Makefile.am  README.md  _setup_.scm  adapter.scm  adapter.sld  config.el  configure.ac  document.scm  document.sld  file.scm  gambit.scm  guile.am  guix.scm  irregex.scm  lsp-server-guile.sld  lsp-server-impl.scm  lsp-server.egg  lsp-server.sld  main.scm  parse.scm  parse.sld  pre-inst-env.in  private.scm  private.sld  server.scm  trie.sld
.guix/: guile-lsp-server.scm
chibi/: pathname.sld  uri.sld
chicken/: chicken.scm  chicken.sld  lsp-chicken-connect.scm  lsp-server.egg  lsp-server.release-info  setup-chicken-doc-for-test.sh  util.sld
common/: base.scm  basic-log.scm  file.scm  lsp-server.sld  server.scm
gambit/: Makefile  _setup_.scm  compile.sh  gambit-lsp-server  gambit-lsp-server.scm  util.scm
geiser/chicken/: README.org  version
geiser/guile/: README.org  version
geiser/guile/src/geiser/: completion.scm  doc.scm  emacs.scm  evaluation.scm  modules.scm  utils.scm  xref.scm
guile/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.mk  configure  configure.ac  guile.am  guile.scm  irregex.scm  lsp-guile-connect  lsp-server-guile.sld  lsp-server.scm  lsp-server.sld  srfi-145.sld
guile/lsp-server/: adapter.sld  document.sld  guile-lsp-server  guile.scm  guile.sld  parse.sld  private.sld  trie.sld
guile/lsp-server/guile/: util.scm  util.sld
guile/lsp-server/private/: adapter.sld  compat.sld  diagnostics.sld  document.sld  file.sld  guile-impl.scm  guile.sld  parse.sld  trie.sld  util.sld
guile/m4/: guile.m4
guile/scripts/: install-deps.sh
lsp-server/: adapter.scm  adapter.sld  document.scm  document.sld  file.scm  guile.scm  lsp-guile-start-server  lsp-server.sld  main.scm  parse.scm  parse.sld  private.scm  private.sld  server.scm  tags.scm  trie.scm  trie.sld
lsp-server/chicken/: chicken.scm  lsp-server.egg
lsp-server/common/: base.scm  basic-log.scm  document.scm  file.scm  internal.scm  lsp-server.sld  main.scm  private.scm  server.scm  tags.scm  util.scm
lsp-server/guile/: guile.scm
lsp-server/private/: _setup_.scm  adapter-impl.scm  adapter.sld  chicken.sld  compat-chicken-impl.scm  compat-gambit-impl.scm  compat-guile-impl.scm  compat.sld  diagnostics-impl.scm  diagnostics.sld  document-impl.scm  document.sld  file-impl.scm  file.sld  gambit.scm  guile-impl.scm  guile.sld  parse-impl.scm  parse.sld  trie.sld  util-impl.scm  util.sld
lsp-server/tests/: run.scm
src/: adapter.scm  adapter.sld  document.scm  document.sld  file.scm  lsp-connect.scm  lsp-server.sld  main.scm  parse.scm  parse.sld  private.scm  private.sld  server.scm  tags.scm  tags.sld  trie.scm
src/tests/: run.scm
tests/: _setup_.scm  parse-tests.scm  run.scm  trie-tests.scm
tests/resources/: sample-1.scm  sample-2.scm  sample-3-included.scm  sample-guile-lib.scm  sample-r7rs-lib.scm
