include guile.am

NOCOMP_SOURCES =       \
  lsp-server/common/base.scm      \
  lsp-server/common/basic-log.scm \
  lsp-server/common/file.scm      \
  lsp-server/common/server.scm    \
  lsp-server/common/util.scm      \
  lsp-server/guile/guile.scm

LIBRARY_DEFINITIONS =  \
  lsp-server.sld

EXTRA_DIST =            \
  README.md             \
  bootstrap             \
  pre-inst-env.in
