include guile.am

NOCOMP_SOURCES =       \
  lsp-server/file.scm      \
  lsp-server/server.scm

SOURCES = \
  lsp-server/guile.scm \
  lsp-server/document.scm \
  lsp-server/private.scm

LIBRARY_DEFINITIONS =  \
  lsp-server.sld

EXTRA_DIST =            \
  README.md             \
  bootstrap             \
  pre-inst-env.in
